fix link styles in li and ol; fix header spacing in body field

--- a/web/themes/custom/bay_area_camp/sass/base/_typography.scss
+++ b/web/themes/custom/bay_area_camp/sass/base/_typography.scss
@@ -1,6 +1,13 @@
-p {
+p,
+li,
+ol {
   font-size: rem-calc(18);
   line-height: rem-calc(28);
+}
+
+li,
+ol {
+  margin-bottom: 8px;
 }
 
 // reuseable classes from styleguide and beyond
@@ -63,4 +70,20 @@ p {
   font-family: $monsterrat;
   font-weight: 600;
   text-transform: uppercase;
+}
+
+// TODO: make better. Quick fixes for now.
+.body,
+.article__body {
+  li,
+  ol {
+    a {
+      @extend .link;
+    }
+  }
+  h2,
+  h3,
+  h4 {
+    padding-top: 24px;
+  }
 }
