--- a/web/themes/custom/bay_area_camp/sass/components/_articles.scss
+++ b/web/themes/custom/bay_area_camp/sass/components/_articles.scss
@@ -16,7 +16,6 @@
 .article__body {
   h2 {
     font-size: rem-calc(24);
-    margin-top: 8px;
   }
 }
 
